<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_border_margin"
        android:text="@string/timer_frag_title_text"
        android:textColor="@color/fragmentTextColor"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_margin="@dimen/fragment_border_margin"

        >

        <!-- 1:a alternativer för timer -->
        <RadioButton
            android:id="@+id/timer1_radio_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            />

        <TextView
            android:id="@+id/timer1_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer1_frag_text"
            android:textColor="@color/fragmentTextColor"
            />


        <!-- 2:a alternativer för timer -->
        <RadioButton
            android:id="@+id/timer2_radio_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            android:id="@+id/timer2_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer2_frag_text"
            android:textColor="@color/fragmentTextColor"
            />


        <!-- 3:e alternativer för timer -->
        <RadioButton
            android:id="@+id/timer3_radio_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />


        <TextView
            android:id="@+id/timer3_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer3_frag_text"
            android:textColor="@color/fragmentTextColor"
            />

        <!-- 4:e alternativer för timer -->
        <RadioButton
            android:id="@+id/timer4_radio_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />


        <TextView
            android:id="@+id/timer4_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer4_frag_text"
            android:textColor="@color/fragmentTextColor"
            />

    </GridLayout>


    <Switch
        android:id="@+id/service_switch_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Tjänst" />

    <TextView
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_text"
        android:textColor="@color/fragmentTextColor"
        />


</LinearLayout>