<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <CheckBox
        android:id="@+id/delete_marked_gallery_imgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textColor="#363737"
        android:text="@string/trash_remove_marked_gallery"
        />


    <CheckBox
        android:id="@+id/delete_marked_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textColor="#363737"
        android:text="@string/trash_remove_marked_images_favorites"
        />

    <CheckBox
        android:id="@+id/delete_all_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textColor="@color/fragmentTextColor"
        android:text="@string/trash_remove_all_favorites"
        />

    <Button
        android:id="@+id/trashConfirmOK_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="OK"
        android:onClick="onOKImagesDisposal"
        />


</LinearLayout>